--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -23,3 +23,22 @@
 .form-label-group input:-ms-input-placeholder{color:#777}
 }
 .body-min-height{min-height:calc(100vh - 61.42px - 55.97px)}
+
+
+/* Scrollbar css  */
+::-webkit-scrollbar {
+    width: 8px;
+}
+::-webkit-scrollbar-track {
+    box-shadow: inset 0 0 3px grey;
+    border-radius: 4px;
+}
+::-webkit-scrollbar-thumb {
+    background: #BDBDBD; 
+    border-radius: 4px;
+}
+
+::-webkit-scrollbar-thumb:hover {
+    background: grey;
+}
+/* End Scrollbar css  */
