--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,8 @@
+
+ol, ul {
+    list-style: none;
+}
+
 .login-content,.signup-content{--input-padding-x:1.5rem;--input-padding-y:.75rem;background:#007bff;background:linear-gradient(to right,#0062E6,#33AEFF);min-height:calc(100vh - 61.42px - 55.97px)}
 .card-signin{border:0;border-radius:1rem;box-shadow:0 .5rem 1rem 0 rgba(0,0,0,0.1)}
 .card-signin .card-title{margin-bottom:2rem;font-weight:300;font-size:1.5rem}
@@ -42,3 +47,4 @@
     background: grey;
 }
 /* End Scrollbar css  */
+
