--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,9 +1,16 @@
 
+*:focus{
+    outline: none;
+}
 ol, ul {
     list-style: none;
 }
+a{
+    color: #222529;
+}
 a:hover{
     text-decoration: none;
+    color: #222529;
 }
 
 .login-content,.signup-content{--input-padding-x:1.5rem;--input-padding-y:.75rem;background:#007bff;background:linear-gradient(to right,#0062E6,#33AEFF);min-height:calc(100vh - 61.42px - 55.97px)}
